<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_bno055</name>
  <version>0.2.1</version>
  <description>ROS2 node for the Bosch BNO055 IMU</description>
  <maintainer email="ros@steelcaverobotics.com">Josh Gadeken</maintainer>
  <license>GNU General Public License version 3</license>

  <exec_depend>python3-adafruit-circuitpython-bno055-pip</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>tf_transformations</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
